@@ -8,9 +8,6 @@
  */
 package de.rub.nds.tlsattacker.core.smtp;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-
 import de.rub.nds.tlsattacker.core.config.Config;
 import de.rub.nds.tlsattacker.core.connection.InboundConnection;
 import de.rub.nds.tlsattacker.core.layer.LayerProcessingResult;
@@ -23,7 +20,7 @@ import de.rub.nds.tlsattacker.core.smtp.command.*;
 import de.rub.nds.tlsattacker.core.smtp.reply.*;
 import de.rub.nds.tlsattacker.core.state.Context;
 import de.rub.nds.tlsattacker.core.state.State;
-import de.rub.nds.tlsattacker.core.unittest.helper.FakeTransportHandler;
+import de.rub.nds.tlsattacker.core.unittest.helper.FakeTcpTransportHandler;
 import de.rub.nds.tlsattacker.core.util.ProviderUtil;
 import java.io.IOException;
 import java.util.ArrayList;
@@ -31,6 +28,8 @@ import java.util.Arrays;
 import java.util.List;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+
+import static org.junit.jupiter.api.Assertions.*;
 
 /**
  * Tests for the SmtpLayer where TLS-Attacker acts as a server, i.e. receiving commands and sending
@@ -41,14 +40,14 @@ public class SmtpLayerInboundTest {
 
     private Config config;
     private SmtpContext context;
-    private FakeTransportHandler transportHandler;
+    private FakeTcpTransportHandler transportHandler;
 
     @BeforeEach
     public void setUp() {
         config = new Config();
         config.setDefaultLayerConfiguration(StackConfiguration.SMTP);
         context = new Context(new State(config), new InboundConnection()).getSmtpContext();
-        transportHandler = new FakeTransportHandler(null);
+        transportHandler = new FakeTcpTransportHandler(null);
         context.setTransportHandler(transportHandler);
         ProviderUtil.addBouncyCastleProvider();
     }
@@ -59,10 +58,11 @@ public class SmtpLayerInboundTest {
         SmtpLayer smtpLayer = (SmtpLayer) context.getLayerStack().getLayer(SmtpLayer.class);
         LayerProcessingResult result = smtpLayer.receiveData();
         System.out.println(result.getUsedContainers());
-        assert (result.getUsedContainers().size() == 1)
-                && (result.getUsedContainers().get(0) instanceof SmtpHELOCommand);
-        assert ((SmtpCommand) result.getUsedContainers().get(0)).getVerb().equals("HELO");
-        assert ((SmtpCommand) result.getUsedContainers().get(0)).getParameters().equals("xyz");
+        assertEquals(1, result.getUsedContainers().size());
+        assertInstanceOf(SmtpHELOCommand.class, result.getUsedContainers().getFirst());
+        assertEquals(SmtpCommandType.HELO, ((SmtpCommand) result.getUsedContainers().getFirst())
+                .getCommandType());
+        assertEquals("xyz", ((SmtpCommand) result.getUsedContainers().getFirst()).getParameters());
         assertEquals(0, result.getUnreadBytes().length);
     }
 
@@ -72,10 +72,12 @@ public class SmtpLayerInboundTest {
         SmtpLayer smtpLayer = (SmtpLayer) context.getLayerStack().getLayer(SmtpLayer.class);
         LayerProcessingResult result = smtpLayer.receiveData();
         System.out.println(result.getUsedContainers());
-        assert (result.getUsedContainers().size() == 1)
-                && (result.getUsedContainers().get(0) instanceof SmtpUnknownCommand);
-        assert ((SmtpCommand) result.getUsedContainers().get(0)).getVerb().equals("UNKNOWNCOMMAND");
-        assert ((SmtpCommand) result.getUsedContainers().get(0)).getParameters().equals("xyz");
+        assertEquals(1, result.getUsedContainers().size());
+        assertInstanceOf(SmtpUnknownCommand.class, result.getUsedContainers().getFirst());
+        assertEquals(SmtpCommandType.UNKNOWN, ((SmtpCommand) result.getUsedContainers().getFirst())
+                .getCommandType());
+        assertEquals("xyz", ((SmtpCommand) result.getUsedContainers().getFirst()).getParameters());
+        assertEquals("UNKNOWNCOMMAND", ((SmtpUnknownCommand) result.getUsedContainers().getFirst()).getUnknownCommandVerb());
         assertEquals(0, result.getUnreadBytes().length);
     }
 
@@ -93,8 +95,8 @@ public class SmtpLayerInboundTest {
         System.out.println(result.getUsedContainers());
         System.out.println(Arrays.toString(result.getUnreadBytes()));
         ;
-        assert (result.getUsedContainers().size() == 1)
-                && (result.getUsedContainers().get(0) instanceof SmtpUnknownCommand);
+        assertEquals(1, result.getUsedContainers().size());
+        assertInstanceOf(SmtpUnknownCommand.class, result.getUsedContainers().getFirst());
         assertEquals(0, result.getUnreadBytes().length);
     }
 
@@ -122,7 +124,7 @@ public class SmtpLayerInboundTest {
         smtpLayer.setLayerConfiguration(layerConfiguration);
         LayerProcessingResult result = smtpLayer.sendConfiguration();
         assertEquals(2, result.getUsedContainers().size());
-        assert (result.getUsedContainers().get(0) instanceof SmtpEHLOReply)
-                && (result.getUsedContainers().get(1) instanceof SmtpNOOPReply);
+        assertInstanceOf(SmtpEHLOReply.class, result.getUsedContainers().get(0));
+        assertInstanceOf(SmtpNOOPReply.class, result.getUsedContainers().get(1));
     }
 }
